crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__a_script_body_echoes_a_string_literal.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn <script>() -> mixed {
  bb0:
    safepoint
    ; stmt s0 @2:1-2:22
    v0 = const.str "Hello, World!"  ; string
    helper.echo_str v0
    release v0
    return
}
