crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__a_second_write_reads_the_array_the_first_one_yielded.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, array) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; array
    ; stmt s0 @4:5-4:15
    v2 = const.int 0  ; int
    v3 = helper.int_to_string v2  ; string
    v4 = const.int 5  ; int
    v5 = array.set v1, v3, v4  ; array
    ; stmt s1 @5:5-5:15
    v6 = const.int 1  ; int
    v7 = helper.int_to_string v6  ; string
    v8 = const.int 6  ; int
    v9 = array.set v5, v7, v8  ; array
    release v9
    release v0
    return
}
