crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__a_this_method_call.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:24
    v1 = const.int 1  ; int
    v2 = call T::a(this: v0, v1)  ; int
    return v2
}
