crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__a_throw_builds_a_runtime_exception_and_enters_its_landing_block.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn <script>() -> mixed {
  bb0:
    safepoint
    ; stmt s0 @2:1-2:29
    v0 = const.str "boom"  ; string
    v1 = throwable.new v0  ; throwable
    release v0
    throw v1 -> bb1
  bb1:
    propagate "<script>() at t.mwl:2"
}
